src/components/ui/Menu/Menu.module.scss
/* ---- Menu ---- */
@import '@resources';

.list {    
    &_header {
        @include flexible();

        & .item {
            &:not(:last-of-type) {
                margin-right: 30px;

                @include mq(1058) {
                    margin-right: 20px;
                }

                @include mq($tablet-large) {
                    margin-right: 0;
                }
            }
        }
        
        & .link {
            @include font-size(18px);
            @include transition();
        
            &:hover {
                @include transition();
                color: $black-2;
                opacity: 0.6;
            }
        }

        @include mq($tablet-large) {
            @include fade(out);
            @include menu-top-calc();
            position: absolute;
            display: block;
            left: 0;
            width: 100%;
            height: 100vh;
            background: rgba(0, 0, 0, 0.2);
            z-index: 100;
        
            & .item {
                @include transition();
                justify-content: space-between;
                background: #fff;
                width: 100%;
                border-top: 1px solid hex-opacity($black-1, 0.05);
                cursor: pointer;

                &:hover {
                    background: $theme-color;
                    color: $white-1;
                }
            }

            & .link {
                @include font-size(22px);
                @include flexible();
                @include transition();
                justify-content: space-between;
                padding: 16px percent($container-tablet-large-gutter, $tablet-large);

                &:after {
                    content: '';
                    display: block;
                    width: 32px;
                    height: 32px;
                    @include transition();
                    @include background('/img/layout/header/arrow-right.svg');
                }

                &:hover {
                    color: $white-1;
                    opacity: 1;

                    &:after {
                        @include transition();
                        @include background('/img/layout/header/arrow-right-white.svg');
                    }
                }

                @include mq($tablet) {
                    padding: 16px percent($container-tablet-gutter, $tablet);
                }
        
                @include mq($phablet) {
                    padding: 16px percent($container-phablet-gutter, $phablet);
                }
            }
        }
    }
}

.show {
    @include fade(in);
}

.open_btn {
    @include transition();
    @include background('/img/layout/header/open-menu.svg');
    width: 32px;
    height: 32px;
    margin-left: 30px;
    display: none;
    cursor: pointer;
    
    &:hover {
        @include link-hover();
    }

    @include mq($tablet-large) {
        display: block;
    }

    @include mq($phablet) {
        margin-left: 16px;
    }
}

.close_btn {
    @include transition();
    @include background('/img/layout/header/close-menu.svg');
}

